--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,10 +11,9 @@ variables:
 
 steps:
     - task: NuGetToolInstaller@1
-
     - task: NuGetCommand@2
       inputs:
-        restoreSolution: '$(solutionName)'
+        restoreSolution: '**/*.sln'
     - task: XamarinAndroid@1
       inputs:
         projectFile: '**/*droid*.csproj'
