--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,7 +37,7 @@ jobs:
   - task: XamariniOS@2
     inputs:
       solutionFile: '$(solutionName)'
-      configuration: '$(buildConfiguration)'
+      configuration: Debug
       packageApp: false
       buildForSimulator: true
       runNugetRestore: false
