--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,3 +41,12 @@ jobs:
       packageApp: false
       buildForSimulator: true
       runNugetRestore: false
+
+- job: RunTests
+  displayName: "Run unit tests"
+  steps:
+  - task: DotNetCoreCLI@2
+    inputs:
+      command: 'test'
+      projects: 'Cryptollet.Tests/Cryptollet.Tests.csproj'
+      configuration: '$(buildConfiguration)'
