--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,6 +25,13 @@ jobs:
           projectFile: '$(androidProject)'
           outputDirectory: '$(outputDirectory)'
           configuration: '$(buildConfiguration)'
+      - task: AndroidSigning@3
+        inputs:
+          apkFiles: '**/*.apk'
+          apksignerKeystoreFile: 'ms.keystore'
+          apksignerKeystorePassword: '$(keystorePassword)'
+          apksignerKeystoreAlias: '$(keystoreName)'
+          apksignerKeyPassword: '$(keystorePassword)'
 
 - job: BuildiOS
   displayName: "Build iOS App"
