--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,6 +23,12 @@ stages:
         - task: NuGetCommand@2
           inputs:
             restoreSolution: '**/*.sln'
+        - task: android-manifest-version@1
+          inputs:
+            sourcePath: 'Cryptollet.Android/Properties/AndroidManifest.xml'
+            versionCodeOption: 'buildid'
+            versionCode: '$(Build.BuildId)'
+            printFile: true
         - task: XamarinAndroid@1
           inputs:
             projectFile: '$(androidProject)'
@@ -41,7 +47,6 @@ stages:
             artifactName: AndroidApk
   - job: BuildiOS
     displayName: "Build iOS App"
-    
     steps:
     - task: NuGetToolInstaller@1
     - task: NuGetCommand@2
